--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ li {
 }
 
 body {
-    font-family: "Courier New", Courier, monospace;
+    font-family: "Inter", sans-serif;
     font-weight: 500;
     font-size: 30px;
     background-color: red;
@@ -23,17 +23,17 @@ body {
 }
 
 .description {
-    padding-left:35%;
+    padding-left:32%;
     padding-top: 20%;
-    padding-right:35%;
+    padding-right:25%;
 }
 
-#change {
+#change, #show-rgb {
     font-family: "Courier New", Courier, monospace;
-    font-weight: 700;
+    font-weight: 550;
     color:black;
     background-color: transparent;
-    margin-left:32%;
+    margin-left:15%;
     margin-top:2%;
     padding-left:3%;
     padding-right: 3%;
@@ -46,10 +46,19 @@ body {
 
 #background-color-desc {
     background-color: black;
-    border-radius:12.5%;
+    border-radius:5%;
     padding-left: 4%;
-    padding-right: 3%;
+    padding-right: 0%;
     padding-top:3%;
     padding-bottom: 3%;
     color:white
+}
+
+#colorText {
+    margin: 0;
+    padding: 0;
+}
+
+#rgb-desc {
+    font-size: 10px;
 }
